# project-liberation

./: .gitignore  Pipfile  README.md  RELEASE-NOTES.md  check-environment-packages.sh  coverage-config  download-and-add-images-to-django.sh  find-files-to-check.sh  full-check.sh  install-environment-packages.sh  lint.sh  mypy.ini  package-lock.json  package.json  pylintrc  pyproject.toml  pytest.ini  reload-db-static.sh  reload-statics.sh  requirements-dev.txt  requirements.txt  reset-and-init-db.sh  resize_image.py  run-test-coverage.sh  style.sh  update-dependecies-files.sh
blog/: admin.py  constants.py  factories.py  models.py  sitemap.py  strings.py  urls.py  urls_admin.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20191112_1617.py  0003_auto_20191112_1617.py  0004_auto_20191118_1328.py  0005_auto_20191120_1524.py  0006_auto_20191126_1526.py  0007_auto_20191128_1207.py  0008_auto_20191202_1520.py  0009_auto_20191203_0824.py  0010_auto_20191203_0959.py  0011_auto_20191204_1137.py  0012_auto_20200625_1631.py  0013_blogarticlepage_recommended_articles.py  0014_auto_20200908_1058.py  0015_auto_20200920_2154.py  0016_remove_blogarticlepage_intro.py  0017_add_new_body_with_captioned_image_to_blogarticlepage_body.py  0017_customimage_customrendition.py  0018_add_blogarticlepage_new_image_fields.py  0018_migrate_blockarticlepage_body_data_to_new_body.py  0019_migrate_image_data_to_custom_image_model.py  0019_replace_blogarticlepage_body_field.py  0020_auto_20210324_1426.py  0020_replace_and_remove_blogarticlepage_old_image_fields.py  0021_blogarticlepage_page_title.py
blog/templates/: blog_base.haml  blog_categories_posts.haml  blog_index_page.haml  blog_post.haml  blog_post_search_results.haml
blog/templatetags/: blog_article_page_filters.py  blog_tag.py
blog/tests/: test_blog_article_page.py  test_blog_category_page.py  test_blog_index_page.py  test_blog_pages_integration.py  test_factories.py  test_helpers.py
common/: custom_sitemap.py  helpers.py
company_website/: admin.py  constants.py  factories.py  fields.py  forms.py  models.py  send_emails_utils.py  sitemap.py  urls.py  view_helpers.py  views.py
company_website/migrations/: 0001_initial.py  0002_auto_20191025_1923.py  0002_testimonial.py  0003_projecttoestimate.py  0004_auto_20191115_1155.py  0005_pageseo.py  0006_employees_is_working.py  0007_auto_20200625_1652.py  0008_auto_20200625_1655.py  0009_auto_20201019_1425.py  0010_estimateprojectemailrecipients.py  0011_auto_20201202_0918.py  0012_employees_bio.py  0013_auto_20210823_1059.py
company_website/static/: css_reset.sass
company_website/templates/: base.haml  career.haml  head.haml  (+8 more)
main_page/: apps.py  views.py
project_liberation/: __init__.py  apps.py  manage.py  system_check.py  urls.py  views.py
project_liberation_deployment/: README.md  configure-project-liberation-server.yml  consts.yml  deploy.yml  versions.yml
(+182 files in other folders)
