[tool.poetry]
name = "project-liberation"
version = "v1.28.1"
description = "Necessary packages for Project Liberation"
authors = ["Karol Beker <karol.beker@codepoets.it>"]

[tool.poetry.dependencies]
python = "3.7.*"
django = "<3"
wagtail-markdown = {git = "https://github.com/kbeker/wagtail-markdown.git"}
django-pipeline = "*"
django-hamlpy = "*"
pillow = "*"
raven = "*"
wagtail = "*"
django-google-analytics-app = "*"
django-robots = "*"
wagtail-factories = "^2.0.0"
html2text = "^2020.1.16"
psycopg2-binary = "^2.8.6"
sorl-thumbnail = "^12.7.0"
PyYAML = "^5.3.1"
ua-parser = "^0.10.0"
user-agents = "^2.2.0"
django-user-agents = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "*"
ipython = "*"
isort = "*"
mypy = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
assertpy = "*"
factory-boy = "*"
ipdb = "*"
parameterized = "*"
opencv-python = "*"
wagtail-factories = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
